--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
     "jquery": "^3.1.1",
-    "laravel-mix": "0.*",
+    "laravel-mix": "^4.1.2",
     "lodash": "^4.17.13",
     "vue": "^2.1.10"
   }
